<resources>
    <string name="app_name">Mystagram</string>
    <string name="userText">Usuario</string>
    <string name="passText">Contraseña</string>
    <string name="loginButton">ACCEDER</string>
    <string name="registerText">¿Nuevo en Mystagram? Pulsa para registrarte</string>
    <string name="rgTextView">Regístrate para ver las fotos de tus amigos.</string>
    <string name="rgEmail">Correo electrónico</string>
    <string name="rgNomCom">Nombre Completo</string>
    <string name="rgUsuario">Nombre de Usuario</string>
    <string name="rgPassword">Contraseña</string>
    <string name="rgButtonRegister">Registrar</string>
    <string name="rgFaltanCampos">Es obligatorio rellenar todos los campos!!</string>
    <string name="rgCorreoIncorrecto">El correo electronico introducido es incorrecto</string>
    <string name="rgLongitudInc">La longitud de la contraseña debe ser de al menos 4 caracteres</string>
    <string name="rgAlertContinuar">CONTINUAR</string>
    <string name="rgAlertTitle">Error al registrar</string>
    <string name="rgExisteUser">El usuario introducido ya existe</string>
    <string name="rgFinRgTitle">Registro completado</string>
    <string name="rgFinMsg">Se ha registrado el usuario correctamente!!</string>
    <string name="rgFinAction">VOLVER AL INICIO</string>
    <string name="lgAlertTitle">Error al iniciar sesión</string>
    <string name="lgClaveIncorrecta">La contraseña introducida es incorrecta</string>
    <string name="lgUsuNoExiste">El Usuario introducido no existe</string>
    <string name="lgAlertRegistrar">REGISTRAR</string>
    <string name="pUltImage">Últimas fotos subidas</string>
    <string name="pSubirFoto">¿Desea subir la siguiente foto?</string>
    <string name="pAccSubirFoto">Subir foto</string>
    <string name="pCancSubirFoto">Cancelar</string>
    <string name="pAccBorrarFoto">Borrar foto</string>
    <string name="pTxtBorrarFoto">¿Estas seguro de que quieres borrar la foto?</string>
    <string name="pToastBorrarFoto">Se ha borrado la foto correctamente!</string>
    <string name="menuSubirFoto">Subir foto</string>
    <string name="menuPreferencias">Preferencias</string>
    <string name="prefIdioma">Elige el idioma de la aplicación</string>
    <string name="prefTitIdioma">Idioma</string>
    <string name="idiomaEsp">Español</string>
    <string name="idiomaEng">Inglés</string>
    <string name="prefUsuario">Mostrar nombres de usuario</string>
    <string name="prefUsuarioLong">Marca esta opción si deseas mostrar los nombres de usuario en la aplicación</string>
    <string name="menuExportarDatos">Exportar Datos</string>
    <string name="exportarDatosOK">Se han exportado los datos de los usuarios correctamente</string>
    <string name="exportarDatosErr">Ha ocurrido algún error al exportar los datos</string>
    <string name="notificacionFotoSubidaTxt">Has subido una foto a Mystagram!!</string>
    <string name="notificacionRegistro">Te has registrado en Mystagram!! Esperamos verte pronto.</string>
    <string name="prefTNumFotos">Número de fotos a visualizar</string>
    <string name="tFotoPorDefecto">Foto Por Defecto</string>
    <string name="falloBD">Error al conectar con la base de datos</string>
    <string name="menuSacarFoto">Sacar Foto</string>
    <string name="rgTelefonoText">Número de telefono</string>
    <string name="rgTelefonoIncorrecto">El número de telefono introducido no es válido</string>
    <string name="anadirContactoTitle">Añadir a contactos</string>
    <string name="anadirContactoText1">¿Desea añadir el usuario</string>
    <string name="anadirContactoText2">a tus contectos?</string>
    <string name="anadirContactoOption1">AÑADIR</string>
    <string name="anadirContactoFallo">No se ha podido añadir el usuario a contactos</string>
    <string name="anadirContactoOK">Se ha añadido correctamente a tus contactos!!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="lanzarNotiTxt">Lanzar Mensaje</string>
    <string name="programarNotiTxt">Programar Mensaje</string>
    <string name="lanzadaNoti">Se ha enviado un mensaje a los dispositivos</string>
    <string name="programaNoti">Se ha programado un mensaje para dentro de un minuto</string>
    <string name="programaDialogText">Vas a programar el lanzamiento de un mensaje mediante Firebase en un minuto</string>
    <string name="programRep">REPETIR</string>
    <string name="programUn">SOLO UNA VEZ</string>
    <string name="programaNotiRep">Se ha programado lanzar un mensaje cada minuto</string>
    <string name="rgNoUbicacion">No se guardará tu ubicación al registrarte</string>
    <string name="locAlertTitle">Error al obtener localizaciones</string>
    <string name="locAlertErrorBD">No se ha podido conectar con la base de datos</string>
    <string name="locAlertErrorNoLoc">Ningún usuario ha compartido su geolocalización al registrarse</string>
    <string name="locTitle">Localizar Usuarios</string>
</resources>