<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/subirFoto"
        android:title="@string/menuSubirFoto"
        app:showAsAction="always" />
    <item
        android:id="@+id/sacarFoto"
        android:title="@string/menuSacarFoto"
        app:showAsAction="never" />
    <item
        android:id="@+id/preferencias"
        android:title="@string/menuPreferencias"
        app:showAsAction="never" />
    <item
        android:id="@+id/lanzarNotificacion"
        android:title="@string/lanzarNotiTxt"
        app:showAsAction="never" />
    <item
        android:id="@+id/programarNotificacion"
        android:title="@string/programarNotiTxt"
        app:showAsAction="never" />


</menu>